<resources>
    <string name="app_name">presentation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_title">마음길</string>
    <string name="home_write_letter">편지 쓰기</string>
    <string name="home_put_letter">편지 놓기</string>
    <string name="home_find_letter">편지 찾기</string>
    <string name="home_letter_storage">편지 보관함</string>
    <string name="point_history_text">10포인트를 수령했습니다.</string>
    <string name="search_friend_search_bar_hint">검색 아이디를 입력하세요</string>
    <string name="point_history_date_text">2023.10.25</string>
    <string name="default_name">김뱁새</string>
    <string name="default_id">\@%s</string>
    <string name="setting_set_bgm">BGM 설정</string>
    <string name="setting_privacy_policy">개인정보 처리방침</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_withdraw">회원탈퇴</string>
    <string name="mypage_default_point">100</string>
    <string name="mypage_friends">친구</string>
    <string name="mypage_add_friend">친구추가</string>

    <string name="select_letter_type_hand_write">손으로 편지쓰기</string>
    <string name="select_letter_type_typing_write">타이핑으로 편지쓰기</string>
    <string name="select_letter_paper_button">편지지 선택</string>
    <string name="select_letter_papper_no_user_letter_papper">보유한 편지지가 없습니다!\n상점에서 구매해주세요</string>
    <string name="select_user_text">편지 보낼 사람을 검색하고 선택하세요</string>
    <string name="select_user_search_notice">검색창에 입력값을 넣어주세요</string>
    <string name="add_letter_image_notice">추가하고 싶은 이미지를 선택해주세요</string>
    <string name="add_letter_image_confirm_button">최종 저장</string>
    <string name="add_letter_image_write_success">편지가 저장되었습니다.</string>
    <string name="add_letter_image_unexpected_image">전송 불가능한 이미지 형태가 포함되어있습니다! 다시 시도해주세요.</string>
    <string name="add_letter_image_forbidden_word">금지어가 포함되어 전송 불가합니다.</string>
    <string name="add_letter_image_no_text">편지 내용을 작성해주세요!</string>
    <string name="add_letter_unknown_err">알수없는 에러가 발생했습니다. 다시 시도해주세요.</string>
    <string name="no_search_result">검색 결과가 없습니다!</string>


    <string name="add_friend_dialog_question">친구로 추가할까요?</string>
    <string name="delete_friend_dialog_question">친구에서 삭제할까요?</string>
    <string name="report_friend_dialog_question">사용자를 신고할까요?</string>
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="report">신고</string>
    <string name="point_history"></string>
    <string name="signup_welcome_text">안녕하세요, 저희는 마음길입니다.\n사용하기 전 친구들이 조회할 수 있는\n아이디를 작성해주세요.</string>
    <string name="signup_id_input_hint">아이디 입력</string>
    <string name="signup_id_check">중복확인</string>
    <string name="alert">주의</string>
    <string name="signup_id_alert">아이디는 본인 개인 정보가 들어가지 않도록\n작성해 주세요.</string>
    <string name="signup_accept">마음길 가입하기</string>
    <string name="bgm_setting">BGM 설정</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="done">완료</string>
    <string name="okay">확인</string>
    <string name="add_friend_letter_dialog_content">하참새님은 김뱁새님의 친구가 아닙니다.</string>
    <string name="loading_message">잠시만 기다려 주세요!</string>

    <!--    toolbar string values   -->
    <string name="toolbar_default_title">Appbar</string>
    <string name="toolbar_friend_search_title">친구 추가</string>
    <string name="toolbar_point_history_title">포인트 정보</string>
    <string name="toolbar_my_page_title">마이페이지</string>
    <string name="toolbar_setting_title">설정</string>
    <string name="toolbar_select_letter_type_title">편지 유형 선택</string>
    <string name="toolbar_select_letter_paper_title">편지지 선택</string>
    <string name="toolbar_hand_write_title">손편지 쓰기</string>
    <string name="toolbar_typing_title">편지 쓰기</string>
    <string name="toolbar_letter_storage_title">보내지 않은 편지</string>
    <string name="toolbar_receive_letter_title">내 편지 보관함</string>
    <string name="toolbar_read_letter_title">편지 읽기</string>
    <string name="toolbar_map_title">지도</string>
    <string name="toolbar_put_letter_title">편지 배치</string>
    <string name="toolbar_store_title">상점</string>
    <string name="toolbar_character_encyclopedia_title">캐릭터 도감</string>
    <string name="toolbar_receiver_search_title">받는 이 검색</string>
    <string name="toolbar_letter_paper_type_title">편지지 선택</string>
    <string name="toolbar_encyclopedia_title">캐릭터 도감</string>

    <string name="friend_edit">친구 수정</string>
    <string name="friend_delete">삭제하기</string>
    <string name="friend_report">신고하기</string>

    <!--  FCM  -->
    <string name="default_notification_channel_id">heart_path</string>
    <string name="default_notification_channel_name">HeartPath</string>

    <!--    toast message   -->
    <string name="toast_message_signup_check_id_plz">아이디 중복 확인은 필수입니다.</string>
    <string name="toast_message_signup_check_id_enter_letter">빈 값으로 설정할 수 없습니다.</string>
    <string name="toast_message_signup_check_id_can_use">사용할 수 있는 아이디입니다.</string>
    <string name="toast_message_signup_check_id_cant_use">사용할 수 없는 아이디입니다.</string>
    <string name="toast_message_signup_done">회원가입이 완료되었습니다.</string>
    <string name="toast_message_signup_fail">회원가입 실패했습니다.</string>

    <string name="signup_check_id_done">확인완료</string>

    <!--    letter read -->
    <string name="received_letter_title">%s님이 보낸 편지</string>
    <string name="received_letter_info">편지에 %d장의 사진이 있습니다.\n넘겨서 확인하세요!</string>

    <!-- character encyclopedia -->
    <string name="character_encyclopedia_go_store">상점</string>
    <string name="character_encyclopedia_set_main_character">대표 캐릭터로 설정</string>
    <string name="character_encyclopedia_change_success">변경 완료!</string>

    <!-- store -->
    <string name="store_character">캐릭터</string>
    <string name="store_letter_papper">편지지</string>
    <string name="store_price">%d 우표</string>
    <string name="store_buy">구매</string>
    <string name="store_already_purchased">이미 구매하였습니다!</string>
    <string name="store_cant_buy">우표가 모자라 구매 불가합니다!</string>
    <string name="store_buy_success">구매 완료!</string>

    <string name="readletter_letter_index">%d/%d</string>
</resources>