<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/custom_round_dialog_view">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/add_friend_letter_dialog_content"
        style="@style/DarkGray_12_Bold_NanumText"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/add_friend_dialog_question"
        style="@style/DarkGray_12_Bold_NanumText"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_friend_add_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/Cancel_Button_Style"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_16sdp"
            android:backgroundTint="@color/Gray"/>
        <Button
            android:id="@+id/button_friend_add_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            style="@style/Add_Friend_Dialog_Add_Button_Style"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>