<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/PrimaryLightBlue"
    tools:context=".login.SignUpFragment">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/image_heart_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_app_name"
        style="@style/BlackLargeLeeSeoyunText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:text="@string/home_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_signup_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_app_name"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/signup_welcome_text"
        android:lineSpacingExtra="@dimen/_4sdp"
        style="@style/DarkGray_12_Bold_NanumText"/>
    <ImageView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/image_bird_delivery"
        app:layout_constraintStart_toEndOf="@id/textview_signup_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_116sdp"/>
    <LinearLayout
        android:id="@+id/linearlayout_signup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textview_signup_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/signup_id_input_hint"
            style="@style/SignUp_Id_Input_EditText_Style"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_id_check"
            style="@style/SignUp_Id_Check_Button_Style"/>
    </LinearLayout>
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text=""-->
<!--        android:textColor="@color/AlertRed"-->
</androidx.constraintlayout.widget.ConstraintLayout>