<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_round_dialog_view"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_20sdp">

    <ImageView
        android:id="@+id/button_diaolog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/icon_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <ImageView
                android:id="@+id/imageview_store_letterpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/image_letterpaper"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_store_letterpaper_name"
                style="@style/DarkGray_14_ExtraBold_NanumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textAlignment="center"
                tools:text="bird name" />

            <TextView
                android:id="@+id/textview_store_letterpaper_description"
                style="@style/DarkGray_10_Bold_NanumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scrollbars="vertical"
                tools:text="description" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_buy"
        style="@style/DarkGray_14_ExtraBold_NanumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/custom_round_corner_primary_light_blue"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/store_buy" />

    <TextView
        android:id="@+id/textview_already_purchased"
        style="@style/DustyGreen_14_ExtraBold_NanumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/store_already_purchased" />

    <TextView
        android:id="@+id/textview_cant_buy"
        style="@style/AlertRed_14_ExtraBold_NanumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/store_cant_buy" />
</LinearLayout>